--- a/package.json
+++ b/package.json
@@ -7,12 +7,16 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "test": "vitest"
+    "test": "vitest",
+    "coverage": "vitest run --coverage"
   },
   "dependencies": {
+    "@vitest/coverage-istanbul": "^1.3.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "history": "^5.3.0",
     "next": "14.1.1",
+    "node-mocks-http": "^1.14.1",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.2.1",
